# Superior-Space-Domination

./: Cargo.toml  README.md  bacon.toml  build.sh
.github/ISSUE_TEMPLATE/: feature.md  task.md
.github/workflows/: ci.yml  continous_integration.yml
src/: assets.rs  components.rs  events.rs  main.rs  plugins.rs  queries.rs  resources.rs  systems.rs  types.rs
src/assets/: images.rs  sounds.rs  user_interace.rs  user_interface.rs
src/components/: animation_timer.rs  controllable.rs  faction.rs  multiselect.rs  planet.rs  player.rs  selectable.rs  selection.rs  size_component.rs  space.rs  space_facility.rs  space_station.rs  spacestation.rs  starship.rs  starship_sprite_bundle.rs  sun.rs  tracking.rs  transform_component.rs  user_interface.rs  weapon.rs
src/controllers/: controller.rs
src/events/: event_handlers.rs  mouse_click_event.rs  mouse_right_click_event.rs  spawn_animated_sprite_event.rs  spawn_planet_event.rs  spawn_sprite_event.rs  spawn_sprite_event_2.rs  spawn_startership_event.rs  spawn_transform_dependent_sprite_events.rs
src/models/: model.rs
src/plugins/: developer.rs  event_handlers.rs  events.rs  groups.rs  resources.rs  run_conditions.rs  running.rs  start.rs  user_interface.rs
src/presenters/: presenter.rs
src/queries/: animation_queries.rs  camera_queries.rs  faction_queries.rs  selection_queries.rs  space_queries.rs  user_interface_queries.rs  window_queries.rs
src/resources/: camera_settings.rs  constants.rs  faction.rs  game_settings.rs  keybindings.rs  spawn_menu_selection.rs
src/systems/: camera.rs  controller.rs  movement.rs  (+3 more)
(+105 files in other folders)
