[package]
name = "example"
version = "0.1.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Rust-Project-Template"
repository = "https://github.com/Steelstone3/Rust-Project-Template"
license = "GPLv3"
readme = "README.md"
include = [

]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]
inquire = "0.6"
